--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Rio de Janeiro - 1º CheckPoint - Front End I</title>
+        <title>Formulário - 2º CheckPoint - Front End I</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header>
-            <h1>Rio de Janeiro</h1>
+            <img src="./img/LogoMakr-5f2YWn.png">
         </header>
         <main>
             <div class="box-main bem-vindo" id="pag-1">
@@ -32,13 +32,9 @@
                 </button>
                 <h2>A cidade Maravilhosa</h2>
 
-                <section >
-                    	              <p>
-		É um dos principais centros econômicos, culturais e financeiros do país, sendo internacionalmente conhecida por diversos ícones culturais e paisagísticos, como o Pão de Açúcar, o morro do Corcovado com a estátua do Cristo Redentor, as praias dos bairros de Copacabana, Ipanema e Barra da Tijuca, entre outras; os estádios do Maracanã e Nilton Santos; o bairro boêmio da Lapa e seus arcos; o Theatro Municipal do Rio de Janeiro; as florestas da Tijuca e da Pedra Branca; a Quinta da Boa Vista; a Biblioteca Nacional; a ilha de Paquetá; o réveillon de Copacabana; o carnaval carioca; a Bossa Nova e o samba. Parte da cidade foi designada Patrimônio Cultural da Humanidade pela UNESCO em 1 de julho de 2012
-	              </p>
-	              <p>
-		Representa o segundo maior PIB do país (e o 30º maior do mundo), estimado em cerca de 329 bilhões de reais (IBGE/2016), e é sede das duas maiores empresas brasileiras - a Petrobras e a Vale, e das principais companhias de petróleo e telefonia do Brasil, além do maior conglomerado de empresas de mídia e comunicações da América Latina, o Grupo Globo. Contemplado por grande número de universidades e institutos, é o segundo maior polo de pesquisa e desenvolvimento do Brasil, responsável por 19% da produção científica nacional, segundo dados de 2005. Rio de Janeiro é considerada uma cidade global beta - pelo inventário de 2008 da Universidade de Loughborough.
-	              </p>
+                <section >      	              
+		É um dos principais centros econômicos, culturais e financeiros do país, sendo internacionalmente conhecida por diversos ícones culturais e paisagísticos, como o Pão de Açúcar, o morro do Corcovado com a estátua do Cristo Redentor, as praias dos bairros de Copacabana, Ipanema e Barra da Tijuca, entre outras; os estádios do Maracanã e Nilton Santos; o bairro boêmio da Lapa e seus arcos; o Theatro Municipal do Rio de Janeiro; as florestas da Tijuca e da Pedra Branca; a Quinta da Boa Vista; a Biblioteca Nacional; a ilha de Paquetá; o réveillon de Copacabana; o carnaval carioca; a Bossa Nova e o samba. Parte da cidade foi designada Patrimônio Cultural da Humanidade pela UNESCO em 1 de julho de 2012. Representa o segundo maior PIB do país (e o 30º maior do mundo), estimado em cerca de 329 bilhões de reais (IBGE/2016), e é sede das duas maiores empresas brasileiras - a Petrobras e a Vale, e das principais companhias de petróleo e telefonia do Brasil, além do maior conglomerado de empresas de mídia e comunicações da América Latina, o Grupo Globo. Contemplado por grande número de universidades e institutos, é o segundo maior polo de pesquisa e desenvolvimento do Brasil, responsável por 19% da produção científica nacional, segundo dados de 2005. Rio de Janeiro é considerada uma cidade global beta - pelo inventário de 2008 da Universidade de Loughborough.
+	              
                 </section>
                 <button class="botao nav-direita">
                     <a href="#pag-3">
