--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         </header>
         <main>
             <div class="box-main bem-vindo" id="pag-1">
-                <h1>Bem-Vindo!</h1>
-                <p>a cidade maravilhosa</p>
+                <h1>Bem-vindo à cidade maravilhosa!</h1>
                 <button class="botao nav-direita">
                     <a href="#pag-2">
                         <span class="material-icons">arrow_forward</span>
