--- a/indexCP.html
+++ b/indexCP.html
@@ -28,7 +28,8 @@
                         <span class="material-icons">arrow_back</span>
                     </a>
                 </button>
-
+            </div>
+            <div>    
                 <section >
                     <h2>Rio de Janeiro</h2>
 
@@ -36,7 +37,7 @@
 	              
                 </section>
             </div>
-            
+
         </main>
         <aside class="asideRight">
             <button class="botao nav-direita">
@@ -60,7 +61,7 @@
                         </div>
                     </div>
                     <div class="description">    
-                        <img src="img/Janaina dos Santos.jpg" alt="Janaina dos Santos"/>
+                        <img src="img/janaina.png" alt="Janaina dos Santos"/>
                         <div class="sobre-conteudo">
                             <p>Janaina dos Santos</p>
                             <p>Aprendiz de Desenvolvedor Full Stack</p>
@@ -68,7 +69,7 @@
                         </div>
                     </div>
                     <div class="description">    
-                        <img src="img/Bianca S Moraes.jpg" alt="Bianca Moraes"/>
+                        <img src="img/bianca.png" alt="Bianca Moraes"/>
                         <div class="sobre-conteudo">
                             <p>Bianca Santos de Moraes</p>
                             <p>Desenvolvedora de Integrações</p>
