--- a/indexCP.html
+++ b/indexCP.html
@@ -16,12 +16,6 @@
             <a href="#">Contato</a>
         </header>
         <aside class="asideLeft">
-            
-        </aside>
-        <main>
-            <div class="box-main bem-vindo" id="pag-1">
-                <h1>Bem-vindo à cidade maravilhosa!</h1>
-            </div>
             <div class="box-main pag-2 conteudo" id="pag-2">
                 <button class="botao nav-esquerda">
                     <a href="#pag-1">
@@ -29,6 +23,12 @@
                     </a>
                 </button>
             </div>
+        </aside>
+        <main>
+            <div class="box-main bem-vindo" id="pag-1">
+                <h1>Bem-vindo à cidade maravilhosa!</h1>
+            </div>
+            
             <div>    
                 <section >
                     <h2>Rio de Janeiro</h2>
@@ -53,7 +53,7 @@
             </div>
             <div class="footerRight">
                     <div class="description">
-                        <img src="img/eu.png" alt="Carlos Alberto"/>
+                        <img src="img/carlos.png" alt="Carlos Alberto"/>
                         <div class="sobre-conteudo">
                             <p>Carlos Alberto S. S. Filho</p>
                             <p>Aprendiz de Desenvolvedor Full Stack</p>
