--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
         </main>
         <aside class="asideRight">
-            <button class="botao nav-direita">
+            <button class="botao">
                 <a href="passeios.html">
                     <span class="material-icons">arrow_forward</span>
                 </a>
