--- a/passeios.html
+++ b/passeios.html
@@ -13,82 +13,43 @@
             <a href="#">Contato</a>
         </header>
         <aside class="asideLeft">
-            <button class="botao nav-esquerda">
+            <button class="botao">
                 <a href="index.html">
                     <span class="material-icons">arrow_back</span>
                 </a>
             </button>
         </aside>
         <main>
-            <h2>O que fazer?</h2>
-                <section>
-                    <div>
-                        <div class="boxes-conteudo">
-                            <div class="box-conteudo">
-                                <img src="img/45.jpg" alt="Passeio pela Pedra do Telégrafo" /> 
-                                <p>Passeio pela Pedra do Telégrafo</p>
-                                <a href="https://www.tripadvisor.com.br/AttractionProductReview-g303506-d17419404-Hiking_Tour_to_Pedra_do_Telegrafo_Telegraph_Rock-Rio_de_Janeiro_State_of_Rio_de_Ja.html">
-                                    <span class="material-icons">
-                                        chevron_right
-                                    </span>
-                                </a>
-
-                        </div>
-                        <div class="box-conteudo">
-                            <img src="img/d1.jpg" alt="Caminhada Em Meio A Floresta da Tijuca" />
-                            <p>Caminhada Em Meio A Floresta da Tijuca</p>
-                            <a href="https://www.tripadvisor.com.br/AttractionProductReview-g303506-d23139835-Private_6_hour_Hiking_Tour_In_The_Tijuca_Rainforest_Waterfalls_Viewpoints-Rio_de_J.html">
-                               <span class="material-icons">chevron_right</span>
-                            </a>
-                        </div>
-                        <div class="box-conteudo">
-                            <img src="img/cc.jpg" alt="Favela Tour Rocinha" />
-                            <p>Favela Tour Rocinha e Vila Canoas</p>
-                            <a href="https://www.tripadvisor.com.br/AttractionProductReview-g303506-d16716949-Favela_Tour_Rocinha_and_Vila_Canoas_in_Rio_de_Janeiro-Rio_de_Janeiro_State_of_Rio_.html">
-                                <span class="material-icons">
-                                        chevron_right
-                                    </span>
-                                </a>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="boxes-conteudo">
-                            <div class="box-conteudo">
-                                <img src="img/ca.jpg" alt="Excursão de Jipe" />
-                                <p>Excursão de jipe pela Floresta da Tijuca </p>
-                                <a href="https://www.tripadvisor.com.br/AttractionProductReview-g303506-d11447461-Tijuca_Rain_Forest_Jeep_Tour_from_Rio_de_Janeiro-Rio_de_Janeiro_State_of_Rio_de_Ja.html">
-                                    <span class="material-icons">
-                                        chevron_right
-                                    </span>
-                                </a>
-                            </div>
-                            <div class="box-conteudo">
-                                <img src="img/be.jpg" alt="Excursão de 6 horas pelo Cristo Redento" />
-                                <p>Excursão de 6 horas pelo Cristo Redentor</p>
-                                <a href="https://www.tripadvisor.com.br/AttractionProductReview-g303506-d12566302-Christ_Redeemer_Sugarloaf_Mountain_and_Selaron_Steps_6_Hour_Tour-Rio_de_Janeiro_St.html">
-                                    <span class="material-icons">
-                                        chevron_right
-                                    </span>
-                                </a>
-
-                            </div>
-                            <div class="box-conteudo">
-                                <img src="img/0c.jpg" alt="Sail in Rio - Passeio de Veleiro" />
-                                <p>testoSail in Rio - Passeio de Veleiro</p>
-                                <a href="https://www.tripadvisor.com.br/AttractionProductReview-g303506-d14054215-3_Hour_Sailing_Experience_in_Rio-Rio_de_Janeiro_State_of_Rio_de_Janeiro.html">
-                                    <span class="material-icons">
-                                        chevron_right
-                                    </span>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </section>
+            <h2>O que fazer?</h2>  
+            <div class="boxes-conteudo">
+                <div class="box-conteudo" id='box1'>
+                    <img src="img/45.jpg" alt="Passeio pela Pedra do Telégrafo" /> 
+                    <a href="https://www.tripadvisor.com.br/AttractionProductReview-g303506-d17419404-Hiking_Tour_to_Pedra_do_Telegrafo_Telegraph_Rock-Rio_de_Janeiro_State_of_Rio_de_Ja.html">
+                        Passeio pela Pedra do Telégrafo
+                    </a>
+                </div>
+                <div class="box-conteudo" id="box2">
+                        <img src="img/d1.jpg" alt="Caminhada Em Meio A Floresta da Tijuca" />
+                        <a href="https://www.tripadvisor.com.br/AttractionProductReview-g303506-d23139835-Private_6_hour_Hiking_Tour_In_The_Tijuca_Rainforest_Waterfalls_Viewpoints-Rio_de_J.html">
+                            Caminhada Em Meio A Floresta da Tijuca
+                        </a>
+                </div>
+                <div class="box-conteudo" id="box3">
+                    <img src="img/0c.jpg" alt="Sail in Rio - Passeio de Veleiro" />
+                    <a href="https://www.tripadvisor.com.br/AttractionProductReview-g303506-d14054215-3_Hour_Sailing_Experience_in_Rio-Rio_de_Janeiro_State_of_Rio_de_Janeiro.html">
+                        Sail in Rio - Passeio de Veleiro
+                    </a>
+                </div>
+                <div class="box-conteudo" id="box4">
+                    <img src="img/ca.jpg" alt="Excursão de Jipe" />
+                    <a href="https://www.tripadvisor.com.br/AttractionProductReview-g303506-d11447461-Tijuca_Rain_Forest_Jeep_Tour_from_Rio_de_Janeiro-Rio_de_Janeiro_State_of_Rio_de_Ja.html">
+                        Excursão de jipe pela Floresta da Tijuca
+                    </a>
+                </div>
+            </div>
         </main>
         <aside class="asideRight">
-            <button class="botao nav-direita">
+            <button class="botao">
                 <a href="#pag-2">
                     <span class="material-icons">arrow_forward</span>
                 </a>
