--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <img src="./img/LogoMakr-5f2YWn.png">
-            <a href="#">Contato</a>
+            <a href="formulario.html">Contato</a>
         </header>
         <aside class="asideLeft">
         </aside>
