--- a/formulario.html
+++ b/formulario.html
@@ -24,56 +24,75 @@
                 <div class="titulo">
                     <label for="logo">Formulário de cadastro:</label>
                 </div>
-                <div class="area">
-                    <label for="name">Nome</label>
-                    <input type="text" id="name" name="name" maxlength="100">
-                </div>
-                <div class="area">
-                    <label for="email">E-mail</label>
-                    <input type="email" id="email" name="email" >
-                </div>
-                <div class="area">
-                    <label for="mobile">Telefone</label>
-                    <input type="tel" id="mobile" name="mobile" placeholder="Somente números" maxlength="11">
-                </div>
+
+                <hr/>
+
+                <fieldset class="grupo">
+                    <div class="area">
+                        <label for="name">Nome</label>
+                        <input type="text" id="name" name="name" maxlength="100">
+                    </div>
+                    <div class="area">
+                        <label for="sname">Sobrenome</label>
+                        <input type="text" id="sname" name="sname" maxlength="100">
+                    </div>
+                </fieldset>
+
+                <fieldset class="grupo">
+                    <div class="area">
+                        <label for="email">E-mail</label>
+                        <input type="email" id="email" name="email" >
+                    </div>
+                    <div class="area">
+                        <label for="mobile">Telefone</label>
+                        <input type="tel" id="mobile" name="mobile" placeholder="Somente números" maxlength="11">
+                    </div>
+                </fieldset>
+
                 <div class="area">
                     <label for="birth">Data de Nascimento</label>
                     <input type="date" id="birth" name="birth">
                 </div>
-                <div>
-                    <input type="radio" id="maiorIdade" name="maiorIdade">
-                    <label for="maiorIdade">Maior de 18 anos</label> 
-                    <input type="radio" id="menorIdade" name="maiorIdade">
-                    <label for="menorIdade">Menor de 18 anos</label> 
+
+                <div class="area">
+                    <label>
+                        <input type="radio" name="idade" value="maiorIdade"> Maior de 18 anos
+                    </label>
+                    <label>
+                        <input type="radio" name="idade" value="menorIdade"> Menor de 18 anos
+                    </label>
                 </div>
-                <div>
+
+                <div class="area">
                     <label for="passeios">Escolha seu passeio:</label>
                     <select id="passeio" name="passeios">
+                        <option value="">--</option>
                         <option value="telegrafo">Passeio pela Pedra do Telégrafo</option>
                         <option value="florestaTijuca">Caminhada pela Floresta da Tijuca</option>
                         <option value="veleiro">Sail in Rio - Passeio de Veleiro</option>
                         <option value="jipe">Excursão de jipe</option>
                     </select>
                 </div>
+
                 <fieldset>
                     <legend> Escolha seus interesses</legend>
                     <div>
-                      <input type = "checkbox" id = "tourism" name = "interesse" value = "tourism">
-                      <label for = "tourism"> Turismo </label>
+                        <input type = "checkbox" id = "tourism" name = "interesse" value = "tourism">
+                        <label for = "tourism"> Turismo </label>
                     </div>
                     <div>
-                      <input type = "checkbox" id = "living" name = "interesse" value = "living">
-                      <label for = "living"> Residência </label>
+                        <input type = "checkbox" id = "living" name = "interesse" value = "living">
+                        <label for = "living"> Residência </label>
                     </div>
                     <div>
                         <input type = "checkbox" id = "study" name = "interesse" value = "study">
                         <label for = "study"> Estudo </label>
-                      </div>
-                  </fieldset>
-                <div class="button">
+                        </div>
+                    </fieldset>
+                
                     <button type="submit">Cadastrar</button>
                     <button type="reset">Limpar</button>
-                </div>
+              
             </form>
         </main>
         <aside class="asideRight">
