--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Formulário - 2º CheckPoint - Front End I</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="styles.css" type="text/css" media="screen" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
             rel="stylesheet">
     </head>
@@ -38,10 +39,10 @@
                         <div class="sobre-conteudo">
                             <p>Carlos Alberto S. S. Filho</p>
                             <p>Aprendiz de Desenvolvedor Full Stack</p>
-                            <p>Cursando Ciência da Computação - Estácio</p>
+                            <p>Cursando Ciência da Computação</p>
                         </div>
                     </div>
-                    <div class="description">    
+                    <div class="description">
                         <img src="img/janaina.png" alt="Janaina dos Santos"/>
                         <div class="sobre-conteudo">
                             <p>Janaina dos Santos</p>
@@ -49,15 +50,15 @@
                             <p>Cursando CTD na Digital House Brasil</p>
                         </div>
                     </div>
-                    <div class="description">    
+                    <div class="description">
                         <img src="img/bianca.png" alt="Bianca Moraes"/>
                         <div class="sobre-conteudo">
                             <p>Bianca Santos de Moraes</p>
                             <p>Desenvolvedora de Integrações</p>
                             <p>Cursando CTD na Digital House Brasil</p>
                         </div>
-                    </div>    
+                    </div>
             </div>
         </footer>
     </body>
-</html>    
+</html>
