--- a/formulario.html
+++ b/formulario.html
@@ -3,6 +3,7 @@
     <head>
         <title>Formulário - 2º CheckPoint - Front End I</title>
         <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css" type="text/css" media="screen" />
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
             rel="stylesheet">
@@ -22,7 +23,7 @@
         <main>
             <form>
                 <div class="titulo">
-                    <label for="logo">Formulário de cadastro:</label>
+                    <label for="logo"><h2>Formulário de cadastro</h2></label>
                 </div>
 
                 <hr/>
